--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -4371,5 +4371,13 @@
     "CL_DV_OV_probe_temperature_graph": "Graf teploty sondy",
     "CL_DV_OV_internal": "Vnitřní",
     "CL_DV_OV_probe_desc": "Sonda vám pomůže měřit teplotu vašeho jídla. Můžete vidět různé teploty v průběhu času.",
-    "CL_DV_RF_no_cleaning_history": "Žádná historie čištění"
+    "CL_DV_RF_no_cleaning_history": "Žádná historie čištění",
+    "CL_DV_RF_add_new_reminder": "Přidat nové připomenutí",
+    "CL_DV_RF_edit_details": "Upravit podrobnosti",
+    "CL_DV_RF_garbage_category": "Kategorie odpadků",
+    "CL_DV_RF_combustible_waste": "Spalitelný odpad",
+    "CL_DV_RF_non_combustible_waste": "Nespalitelný odpad",
+    "CL_DV_RF_disposal_reminder": "Upomínka na likvidaci",
+    "CL_DV_RF_reminders": "Připomenutí",
+    "CL_DV_RF_x_hour_before_the_plan": "** hodinu před plánem"
 }
