--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4371,5 +4371,13 @@
     "CL_DV_OV_probe_temperature_graph": "Γράφημα θερμοκρασίας ανιχνευτή",
     "CL_DV_OV_internal": "Εσωτερικός",
     "CL_DV_OV_probe_desc": "Ο αισθητήρας σας βοηθά να μετρήσετε τη θερμοκρασία του φαγητού σας. Μπορείτε να δείτε τις διαφορετικές θερμοκρασίες με την πάροδο του χρόνου.",
-    "CL_DV_RF_no_cleaning_history": "Χωρίς ιστορικό καθαρισμού"
+    "CL_DV_RF_no_cleaning_history": "Χωρίς ιστορικό καθαρισμού",
+    "CL_DV_RF_add_new_reminder": "Προσθήκη νέας υπενθύμισης",
+    "CL_DV_RF_edit_details": "Επεξεργασία λεπτομερειών",
+    "CL_DV_RF_garbage_category": "Κατηγορία σκουπιδιών",
+    "CL_DV_RF_combustible_waste": "Εύφλεκτα απόβλητα",
+    "CL_DV_RF_non_combustible_waste": "Μη εύφλεκτα απόβλητα",
+    "CL_DV_RF_disposal_reminder": "Υπενθύμιση απόρριψης",
+    "CL_DV_RF_reminders": "Υπενθυμίσεις",
+    "CL_DV_RF_x_hour_before_the_plan": "** ώρα πριν το σχέδιο"
 }
