--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -4371,5 +4371,13 @@
     "CL_DV_OV_probe_temperature_graph": "نمودار دمای پروب",
     "CL_DV_OV_internal": "داخلی",
     "CL_DV_OV_probe_desc": "کاوشگر به شما کمک می کند دمای غذای خود را اندازه گیری کنید. شما می توانید دماهای مختلف را در طول زمان مشاهده کنید.",
-    "CL_DV_RF_no_cleaning_history": "بدون سابقه تمیز کردن"
+    "CL_DV_RF_no_cleaning_history": "بدون سابقه تمیز کردن",
+    "CL_DV_RF_add_new_reminder": "یک یادآوری جدید اضافه کنید",
+    "CL_DV_RF_edit_details": "ویرایش جزئیات",
+    "CL_DV_RF_garbage_category": "دسته زباله",
+    "CL_DV_RF_combustible_waste": "زباله های قابل احتراق",
+    "CL_DV_RF_non_combustible_waste": "زباله های غیر قابل احتراق",
+    "CL_DV_RF_disposal_reminder": "یادآوری دفع",
+    "CL_DV_RF_reminders": "یادآوری ها",
+    "CL_DV_RF_x_hour_before_the_plan": "** ساعت قبل از طرح"
 }
