--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4371,5 +4371,13 @@
     "CL_DV_OV_probe_temperature_graph": "Зондтың температура графигі",
     "CL_DV_OV_internal": "Ішкі",
     "CL_DV_OV_probe_desc": "Зонд тағамның температурасын өлшеуге көмектеседі. Уақыт өте әртүрлі температураны көруге болады.",
-    "CL_DV_RF_no_cleaning_history": "Тазалау тарихы жоқ"
+    "CL_DV_RF_no_cleaning_history": "Тазалау тарихы жоқ",
+    "CL_DV_RF_add_new_reminder": "Жаңа еске салғыш қосыңыз",
+    "CL_DV_RF_edit_details": "Мәліметтерді өңдеу",
+    "CL_DV_RF_garbage_category": "Қоқыс санаты",
+    "CL_DV_RF_combustible_waste": "Жанғыш қалдықтар",
+    "CL_DV_RF_non_combustible_waste": "Жанбайтын қалдықтар",
+    "CL_DV_RF_disposal_reminder": "Жою туралы еске салғыш",
+    "CL_DV_RF_reminders": "Еске салғыштар",
+    "CL_DV_RF_x_hour_before_the_plan": "** жоспардан сағат бұрын"
 }
