--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -4379,5 +4379,6 @@
     "CL_DV_RF_non_combustible_waste": "Негорими отпадъци",
     "CL_DV_RF_disposal_reminder": "Напомняне за изхвърляне",
     "CL_DV_RF_reminders": "Напомняния",
-    "CL_DV_RF_x_hour_before_the_plan": "** час преди плана"
+    "CL_DV_RF_x_hour_before_the_plan": "** час преди плана",
+    "CL_DV_RF_delete_this_reminder": "Изтрийте това напомняне"
 }
