--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -4379,5 +4379,6 @@
     "CL_DV_RF_non_combustible_waste": "Residuos no combustibles",
     "CL_DV_RF_disposal_reminder": "Recordatorio de eliminación",
     "CL_DV_RF_reminders": "Recordatorios",
-    "CL_DV_RF_x_hour_before_the_plan": "** hora antes del plan"
+    "CL_DV_RF_x_hour_before_the_plan": "** hora antes del plan",
+    "CL_DV_RF_delete_this_reminder": "Eliminar este recordatorio"
 }
