--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -4379,5 +4379,6 @@
     "CL_DV_RF_non_combustible_waste": "Déchets non combustibles",
     "CL_DV_RF_disposal_reminder": "Rappel d'élimination",
     "CL_DV_RF_reminders": "Rappels",
-    "CL_DV_RF_x_hour_before_the_plan": "** heure avant le plan"
+    "CL_DV_RF_x_hour_before_the_plan": "** heure avant le plan",
+    "CL_DV_RF_delete_this_reminder": "Supprimer ce rappel"
 }
