--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -4379,5 +4379,6 @@
     "CL_DV_RF_non_combustible_waste": "פסולת בלתי דליקה",
     "CL_DV_RF_disposal_reminder": "תזכורת לסילוק",
     "CL_DV_RF_reminders": "תזכורות",
-    "CL_DV_RF_x_hour_before_the_plan": "** שעה לפני התוכנית"
+    "CL_DV_RF_x_hour_before_the_plan": "** שעה לפני התוכנית",
+    "CL_DV_RF_delete_this_reminder": "מחק את התזכורת הזו"
 }
