--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -4379,5 +4379,6 @@
     "CL_DV_RF_non_combustible_waste": "Nem éghető hulladék",
     "CL_DV_RF_disposal_reminder": "Ártalmatlanítási emlékeztető",
     "CL_DV_RF_reminders": "Emlékeztetők",
-    "CL_DV_RF_x_hour_before_the_plan": "** órával a terv előtt"
+    "CL_DV_RF_x_hour_before_the_plan": "** órával a terv előtt",
+    "CL_DV_RF_delete_this_reminder": "Az emlékeztető törlése"
 }
