--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -4379,5 +4379,6 @@
     "CL_DV_RF_non_combustible_waste": "Sampah yang tidak mudah terbakar",
     "CL_DV_RF_disposal_reminder": "Pengingat pembuangan",
     "CL_DV_RF_reminders": "Pengingat",
-    "CL_DV_RF_x_hour_before_the_plan": "** jam sebelum rencana"
+    "CL_DV_RF_x_hour_before_the_plan": "** jam sebelum rencana",
+    "CL_DV_RF_delete_this_reminder": "Hapus pengingat ini"
 }
