--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -4379,5 +4379,6 @@
     "CL_DV_RF_non_combustible_waste": "Ikke-brennbart avfall",
     "CL_DV_RF_disposal_reminder": "Påminnelse om avhending",
     "CL_DV_RF_reminders": "Påminnelser",
-    "CL_DV_RF_x_hour_before_the_plan": "** time før planen"
+    "CL_DV_RF_x_hour_before_the_plan": "** time før planen",
+    "CL_DV_RF_delete_this_reminder": "Slett denne påminnelsen"
 }
