--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -4379,5 +4379,6 @@
     "CL_DV_RF_non_combustible_waste": "Resíduos não combustíveis",
     "CL_DV_RF_disposal_reminder": "Lembrete de descarte",
     "CL_DV_RF_reminders": "Lembretes",
-    "CL_DV_RF_x_hour_before_the_plan": "** hora antes do plano"
+    "CL_DV_RF_x_hour_before_the_plan": "** hora antes do plano",
+    "CL_DV_RF_delete_this_reminder": "Apagar este lembrete"
 }
