--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -4379,5 +4379,6 @@
     "CL_DV_RF_non_combustible_waste": "Негориви отпад",
     "CL_DV_RF_disposal_reminder": "Подсетник за одлагање",
     "CL_DV_RF_reminders": "Подсетници",
-    "CL_DV_RF_x_hour_before_the_plan": "** сат пре плана"
+    "CL_DV_RF_x_hour_before_the_plan": "** сат пре плана",
+    "CL_DV_RF_delete_this_reminder": "Избришите овај подсетник"
 }
