--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4379,5 +4379,6 @@
     "CL_DV_RF_non_combustible_waste": "Негорючі відходи",
     "CL_DV_RF_disposal_reminder": "Нагадування про утилізацію",
     "CL_DV_RF_reminders": "Нагадування",
-    "CL_DV_RF_x_hour_before_the_plan": "** за годину до плану"
+    "CL_DV_RF_x_hour_before_the_plan": "** за годину до плану",
+    "CL_DV_RF_delete_this_reminder": "Видалити це нагадування"
 }
